2008-11-04  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-file.h:
	gnome_cmd_file_ref() returns the file now

2008-11-03  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-advrename-lexer.h:
	* src/gnome-cmd-advrename-lexer.ll:
	advrename lexer: report presence of $c/$c(n) in template

2008-11-02  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-advrename-lexer.h:
	* src/gnome-cmd-advrename-lexer.ll:
	gnome_cmd_advrename_parse_fname -> gnome_cmd_advrename_parse_template

2008-10-31  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	Kill dead code

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-user-actions.cc:
	Simplify code for advrename dlg invoking

2008-10-29  Piotr Eljasiak  <epiotr@use.pl>

	* src/Makefile.am:
	* src/gnome-cmd-advrename-dialog.cc:
	Advanced file rename tool - minor change in dlg mnemonics

2008-10-24  Piotr Eljasiak  <epiotr@use.pl>

	* src/Makefile.am:
	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-convert.cc:
	* src/gnome-cmd-convert.h:
	Advanced file rename tool - trim blanks

	* src/tags/gnome-cmd-tags.cc:
	Simplify metadata tags descriptions

	* src/tags/gnome-cmd-tags.cc:
	Typo fix: predifine -> predefine

2008-10-21  Piotr Eljasiak  <epiotr@use.pl>

	* src/intviewer/viewer-window.cc:
	Internal viewer: set zoom index properly when viewing in normal size

2008-10-18  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-file-selector.cc:
	Added signal "dir-changed" (GnomeCmdFileList -> GnomeCmdFileSelector)

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-search-dialog.cc:
	Replaced gnome_cmd_file_list_new() with GnomeCmdFileList::operator new()

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h: